--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,5 +1,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="<%= filename %>style.css">
+    <script src="<%= filename %>script.js" defer></script>
     <title>Digital Cookbook | <%= title %></title>
 </head>
