--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,7 +2,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <% if(typeof style != 'undefined' && style == 'yes' && typeof filename != 'undefined') { %>
     <link rel="stylesheet" href="<%= filename %>style.css">
+    <% } %>
+    <% if(typeof js != 'undefined' && js == 'yes' && typeof filename != 'undefined') { %>
     <script src="<%= filename %>script.js" defer></script>
+    <% } %>
     <title>Digital Cookbook | <%= title %></title>
 </head>
