--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('./partials/head.ejs', { title: title}) %>
+    <%- include('./partials/head.ejs') %>
 <body>
 
     <%- include('./partials/nav.ejs') %>
