--- a/views/404.ejs
+++ b/views/404.ejs
@@ -5,7 +5,7 @@
 
     <%- include('./partials/nav.ejs') %>
 
-    <h1>Test</h1>
+    <h1>Error 404 - Website not found</h1>
     
     
     <%- include('./partials/footer.ejs') %>
