create first simple navbar mockup

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,1 +1,30 @@
-<p>This is a nav</p>
+<!-- Nav/Header -->
+<nav class="navbar">
+    <ul class="flexcontainer-navbar">
+        <li class="nav-item">
+            <a href="/" class="nav-link">
+                <span class="link-text">Home</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a href="/about" class="nav-link">
+                <span class="link-text">About</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a href="/create" class="nav-link">
+                <span class="link-text">Create</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a href="/my-recipes" class="nav-link">
+                <span class="link-text">My Recipes</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a href="/login" class="nav-link">
+                <span class="link-text">Login</span>
+            </a>
+        </li>
+    </ul>
+</nav>
