adjust html page context

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,7 +5,9 @@
 
     <%- include('./partials/nav.ejs') %>
 
-    <h1>Test</h1>
+    <h1>About</h1>
+
+    <p>This is a Website to save, create and share cooking recipes.</p>
     
     
     <%- include('./partials/footer.ejs') %>
