--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
 
     <%- include('./partials/nav.ejs') %>
 
-    <h1>Test</h1>
+    <h1>Most Popular Recipes</h1>
     
     
     <%- include('./partials/footer.ejs') %>
