--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,10 +3,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <% if(typeof style != 'undefined' && style == 'yes' && typeof filename != 'undefined') { %>
-    <link rel="stylesheet" href="<%= filename %>style.css">
+    <link rel="stylesheet" href="<%= filename %>Style.css">
     <% } %>
     <% if(typeof js != 'undefined' && js == 'yes' && typeof filename != 'undefined') { %>
-    <script src="<%= filename %>script.js" defer></script>
+    <script src="<%= filename %>Script.js" defer></script>
     <% } %>
     <title>Digital Cookbook | <%= title %></title>
 </head>
