--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,14 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('./partials/head.ejs') %>
-<body>
+<%- include('./partials/head.ejs') %>
 
-    <%- include('./partials/nav.ejs') %>
+    <body>
 
-    <h1>Test</h1>
-    
-    
-    <%- include('./partials/footer.ejs') %>
+        <%- include('./partials/nav.ejs') %>
 
-</body>
-</html> 
+            <main>
+
+                <!-- Anfang Formular -->
+                <form id="form-new-recipe" class="form" action="">
+
+                    <h1>Create a new recipe</h1>
+
+                    <!-- Recipe Name -->
+                    <div class="input-control">
+                        <label for="user">Recipe Name:</label>
+                        <input type="text" id="recipe-name" name="recipe-name">
+                        <div class="errormessage"></div>
+                    </div>
+                    <!-- Own Recipe Rating -->
+                    <div class="input-control">
+                        <label for="user">Own Rating for Recipe:</label><br> <!-- Achtung hier br  -->
+                        <input type="radio" id="1star" name="rating" value="1">
+                        <label for="1">1 Star</label><br>
+                        <input type="radio" id="2star" name="rating" value="2">
+                        <label for="1">2 Star</label><br>
+                        <input type="radio" id="3star" name="rating" value="3">
+                        <label for="1">3 Star</label><br>
+                        <input type="radio" id="4star" name="rating" value="4">
+                        <label for="1">4 Star</label><br>
+                        <input type="radio" id="5star" name="rating" value="5" checked>
+                        <label for="1">5 Star</label><br>
+                        <div class="errormessage"></div>
+                    </div>
+                    <!-- Difficulty of preparing this dish -->
+                    <div class="input-control">
+                        <label for="difficulty">Difficulty:</label>
+                        <select name="difficulty" id="difficulty" size="1">
+                            <option value="easy">Easy</option>
+                            <option value="medium">Medium</option>
+                            <option value="hard">Hard</option>
+                            <option value="chef">Chef</option>
+                        </select> <!-- Should be drop down with easy, medium, hard -->
+                        <div class="errormessage"></div>
+                    </div>
+                    <!-- Estimated time of preparation of the dish -->
+                    <div class="input-control">
+                        <label for="preparation-time">Estimated Total Preparation Time:</label>
+                        <input type="text" id="preparation-time" name="preparation-time">
+                        <div class="errormessage"></div>
+                    </div>
+                    <div class="input-control">
+                        <label for="recipe">Full Recipe:</label>
+                        <input type="text" id="recipe" name="recipe">
+                        <div class="errormessage"></div>
+                    </div>
+
+                    <!-- Formular absenden -->
+                    <button type="submit">Create Recipe</button>
+
+                </form> <!-- Formular Ende -->
+
+
+            </main>
+
+            <%- include('./partials/footer.ejs') %>
+
+    </body>
+
+</html>
