add image upload for recipe creation

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -15,8 +15,13 @@
 
                     <!-- Recipe Name -->
                     <div class="input-control">
-                        <label for="user">Recipe Name:</label>
+                        <label for="user">*Recipe Name:</label>
                         <input type="text" id="recipe-name" name="recipe-name">
+                        <div class="errormessage"></div>
+                    </div>
+                    <div class="input-control">
+                        <label for="image">Recipe Picture (optional):</label>
+                        <input type="file" id="image" name="image">
                         <div class="errormessage"></div>
                     </div>
                     <!-- Own Recipe Rating -->
