--- a/views/my-recipes.ejs
+++ b/views/my-recipes.ejs
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('./partials/head.ejs', { title: title}) %>
-<body>
+<%- include('./partials/head.ejs') %>
 
-    <%- include('./partials/nav.ejs') %>
+    <body>
 
-    <h1>Test</h1>
+        <%- include('./partials/nav.ejs') %>
+
+            <h1>My Recipes</h1>
+
+            <% if(recipes.length > 0) { %>
+                <% recipes.forEach(recipe => { %>
+                    <a class="recipe" href="/recipe/<%= recipe._id %>">
+                        <div class="recipe-image">
+                            <img src="<%= recipe.image_link %>"" alt="">
+                        </div>
+                        <div class="recipe-info">
+                            <h2><%= recipe.name %></h2>
+                            <p>Author Rating: <%= recipe.author_rating %></p>
+                            <p>Public Rating: <%= recipe.public_rating %></p>
+                            <p>Preparation Time: <%= recipe.preparation_time %> min</p>
+                        </div>
+                    </a>
+                <% }); %>
+            <% } %>
     
     
     <%- include('./partials/footer.ejs') %>
