--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,6 +3,7 @@
 <%- include('./partials/head.ejs') %>
 
     <body>
+        <%- include('./partials/head.ejs') %>
 
             <main>
 
@@ -28,41 +29,13 @@
 
                 </form> <!-- Formular Ende -->
 
-                <form id="formsignup" class="form" data-visible="false"><!-- Anfang Formular -->
-
-                    <h1>Sign Up</h1>
-
-                    <!-- USERNAME -->
-                    <div class="input-control">
-                        <label for="newuser">Username</label></td>
-                        <input type="text" id="newuser" name="newuser">
-                        <div class="errormessage"></div>
-                    </div>
-                    <!-- PASSWORD -->
-                    <div class="input-control">
-                        <label for="newpassword"> Password </label>
-                        <input type="password" id="newpassword" name="newpassword">
-                        <div class="errormessage"></div>
-                    </div>
-
-                    <!-- PASSWORD -->
-                    <div class="input-control">
-                        <label for="newpassword2">Confirm Password </label>
-                        <input type="password" id="newpassword2" name="newpassword2">
-                        <div class="errormessage"></div>
-                    </div>
-
-                    <!-- Formular absenden -->
-                    <button type="submit">Sign Up</button>
-
-                </form> <!-- Formular Ende -->
-
-
                 <div id="switchcontainer">
-                    <button id="switchLoginSignup">Sign Up</button>
+                    <a href="/signup" id="switchLoginSignup">Sign Up</a>
                 </div>
 
             </main>
+
+            <%- include('./partials/footer.ejs') %>
 
     </body>
 
