fix visibility attributes

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
 
             <main>
 
-                <form id="formlogin" class="form" data-visible="true" action=""><!-- Anfang Formular -->
+                <form id="formlogin" class="form" action=""><!-- Anfang Formular -->
 
                     <h1>Login</h1>
 
