--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -7,30 +7,32 @@
 
             <main>
 
-                <h1>Sign Up</h1>
+                <form id="formlogin" class="form" action=""><!-- Anfang Formular -->
 
-                <!-- USERNAME -->
-                <div class="input-control">
-                    <label for="newuser">Username</label></td>
-                    <input type="text" id="newuser" name="newuser">
-                    <div class="errormessage"></div>
-                </div>
-                <!-- PASSWORD -->
-                <div class="input-control">
-                    <label for="newpassword"> Password </label>
-                    <input type="password" id="newpassword" name="newpassword">
-                    <div class="errormessage"></div>
-                </div>
+                    <h1>Sign Up</h1>
 
-                <!-- PASSWORD -->
-                <div class="input-control">
-                    <label for="newpassword2">Confirm Password </label>
-                    <input type="password" id="newpassword2" name="newpassword2">
-                    <div class="errormessage"></div>
-                </div>
+                    <!-- USERNAME -->
+                    <div class="input-control">
+                        <label for="newuser">Username</label></td>
+                        <input type="text" id="newuser" name="newuser">
+                        <div class="errormessage"></div>
+                    </div>
+                    <!-- PASSWORD -->
+                    <div class="input-control">
+                        <label for="newpassword"> Password </label>
+                        <input type="password" id="newpassword" name="newpassword">
+                        <div class="errormessage"></div>
+                    </div>
 
-                <!-- Formular absenden -->
-                <button type="submit">Sign Up</button>
+                    <!-- PASSWORD -->
+                    <div class="input-control">
+                        <label for="newpassword2">Confirm Password </label>
+                        <input type="password" id="newpassword2" name="newpassword2">
+                        <div class="errormessage"></div>
+                    </div>
+
+                    <!-- Formular absenden -->
+                    <button type="submit">Sign Up</button>
 
                 </form> <!-- Formular Ende -->
 
