add frontend login and signup script

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -7,9 +7,10 @@
 
             <main>
 
-                <form id="formlogin" class="form" action=""><!-- Anfang Formular -->
+                <form id="formsignup" class="form" action=""><!-- Anfang Formular -->
 
                     <h1>Sign Up</h1>
+                    <h2 id="signup-successful" data-visible="false">Successful</h2>
 
                     <!-- USERNAME -->
                     <div class="input-control">
