--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 <%- include('./partials/head.ejs') %>
 
     <body>
-        <%- include('./partials/head.ejs') %>
+        <%- include('./partials/nav.ejs') %>
 
             <main>
 
