--- a/public/signupStyle.css
+++ b/public/signupStyle.css
@@ -94,14 +94,14 @@ body {
     text-decoration: none;
 }
 
-#signup-successful[data-visible="true"]{
+#successful[data-visible="true"]{
 /*     position: absolute;
     top: 2em; */
     color: #09c372;
     display: inline-block;
 }
 
-#signup-successful[data-visible="false"]{
+#successful[data-visible="false"]{
     display: none;
 }
 
