--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,6 +10,7 @@
                 <form id="formlogin" class="form" action=""><!-- Anfang Formular -->
 
                     <h1>Login</h1>
+                    <h2 id="successful" data-visible="false">Successful</h2>
 
                     <!-- USERNAME -->
                     <div class="input-control">
