--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -10,7 +10,7 @@
                 <form id="formsignup" class="form" action=""><!-- Anfang Formular -->
 
                     <h1>Sign Up</h1>
-                    <h2 id="signup-successful" data-visible="false">Successful</h2>
+                    <h2 id="successful" data-visible="false">Successful</h2>
 
                     <!-- USERNAME -->
                     <div class="input-control">
