--- a/views/create.ejs
+++ b/views/create.ejs
@@ -9,33 +9,33 @@
             <main>
 
                 <!-- Anfang Formular -->
-                <form id="form-new-recipe" class="form" action="">
+                <form id="form-new-recipe" class="form" action="/create-submit" method="POST">
 
                     <h1>Create a new recipe</h1>
 
                     <!-- Recipe Name -->
                     <div class="input-control">
-                        <label for="user">*Recipe Name:</label>
-                        <input type="text" id="recipe-name" name="recipe-name">
+                        <label for="user">Recipe Name:</label>
+                        <input type="text" id="name" name="name" required>
                         <div class="errormessage"></div>
                     </div>
                     <div class="input-control">
                         <label for="image">Recipe Picture (optional):</label>
-                        <input type="file" id="image" name="image">
+                        <input type="file" id="image_link" name="image_link">
                         <div class="errormessage"></div>
                     </div>
                     <!-- Own Recipe Rating -->
                     <div class="input-control">
                         <label for="user">Own Rating for Recipe:</label><br> <!-- Achtung hier br  -->
-                        <input type="radio" id="1star" name="rating" value="1">
+                        <input type="radio" id="1star" name="author_rating" value="1">
                         <label for="1">1 Star</label><br>
-                        <input type="radio" id="2star" name="rating" value="2">
+                        <input type="radio" id="2star" name="author_rating" value="2">
                         <label for="1">2 Star</label><br>
-                        <input type="radio" id="3star" name="rating" value="3">
+                        <input type="radio" id="3star" name="author_rating" value="3">
                         <label for="1">3 Star</label><br>
-                        <input type="radio" id="4star" name="rating" value="4">
+                        <input type="radio" id="4star" name="author_rating" value="4">
                         <label for="1">4 Star</label><br>
-                        <input type="radio" id="5star" name="rating" value="5" checked>
+                        <input type="radio" id="5star" name="author_rating" value="5" checked>
                         <label for="1">5 Star</label><br>
                         <div class="errormessage"></div>
                     </div>
@@ -53,12 +53,12 @@
                     <!-- Estimated time of preparation of the dish -->
                     <div class="input-control">
                         <label for="preparation-time">Estimated Total Preparation Time:</label>
-                        <input type="text" id="preparation-time" name="preparation-time">
+                        <input type="text" id="preparation_time" name="preparation_time" required>
                         <div class="errormessage"></div>
                     </div>
                     <div class="input-control">
                         <label for="recipe">Full Recipe:</label>
-                        <input type="text" id="recipe" name="recipe">
+                        <input type="text" id="full_recipe" name="full_recipe" required>
                         <div class="errormessage"></div>
                     </div>
 
