--- a/views/recipe.ejs
+++ b/views/recipe.ejs
@@ -10,7 +10,7 @@
 
                     <div class="recipe">
                         <div class="recipe-image">
-                            <img src="<%= recipe.image_link %>"" alt="">
+                            <img style="width: 100%; aspect-ratio: 1;" src="<%= recipe.image_link %>"" alt="">
                         </div>
                         <div class="recipe-info">
                             <h1><%= recipe.name %></h1>
