--- a/views/display-recipes.ejs
+++ b/views/display-recipes.ejs
@@ -14,16 +14,27 @@
                         <div class="recipe-image">
                             <img style="width: 100%; aspect-ratio: 1;" src="<%= recipe.image_link %>" alt="">
                         </div>
+                        <% if(recipes.created_by == currentUser_id) { %>
+                        <div id="edit_delete">
+                            <a id="edit" href="/recipe/edit/<%= recipe._id %>">Edit</a>
+                            <a id="delte" href="/recipe/delete/<%= recipe._id %>">Delete</a>
+                        </div>
+                        <% } %>
                         <div class="recipe-info">
                             <h2><%= recipe.name %></h2>
                             <p>Author Rating: <%= recipe.author_rating %></p>
                             <p>Public Rating: <%= recipe.public_rating %></p>
                             <p>Preparation Time: <%= recipe.preparation_time %> min</p>
+                            <% if(users != 'undefined') { %>
                             <% let username = '"deleted user"'; users.forEach(user => { if(user._id == recipe.created_by){ username = user.username}});%>
                             <p>Created by <%= username %></p>
+                            <% } %>
                         </div>
                     </a>
                 <% }); %>
+            <% } else {%>
+                <br>
+                <h2>No recipes found...</h2>
             <% } %>
     
     
