--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,7 +1,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <% if(typeof defaultstyle != 'undefined' && defaultstyle == 'yes') %>
+    <% if(typeof defaultstyle != 'undefined' && defaultstyle == 'yes') { %>
     <link rel="stylesheet" href="/style.css">
     <% } %>
     <% if(typeof stylefile != 'undefined' && stylefile != 'no') { %>
