add saved-recipes to navbar

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -22,6 +22,11 @@
             </a>
         </li>
         <li class="nav-item">
+            <a href="/saved-recipes" class="nav-link">
+                <span class="link-text">Saved Recipes</span>
+            </a>
+        </li>
+        <li class="nav-item">
             <% if( typeof currentUser === 'undefined') { %>
             <a href="/login" class="nav-link">
                 <span class="link-text">Login</span>
