--- a/views/recipe.ejs
+++ b/views/recipe.ejs
@@ -18,11 +18,16 @@
                                 <a id="delte" href="/recipe/delete/<%= recipe._id %>">Delete</a>
                             </div>
                         <% } %>
-                        <% if( typeof currentUser != 'undefined' && recipe.created_by != currentUser.userid) { %>
-                            <div id="save_container">
+                        <% if( typeof currentUser != 'undefined' && recipe.created_by != currentUser.userid ) { %>
+                            <% if( !currentUser.saved_recipes.includes(recipe._id) ) { %>
+                            <div class="save_container">
                                 <a id="save" href="/recipe/save/<%= recipe._id %>">Save</a>
                             </div>
-                        <% } %>
+                        <% } else { %>
+                            <div class="save_container">
+                                <a id="unsave" href="/recipe/unsave/<%= recipe._id %>">Unsave</a>
+                            </div>
+                        <% } } %>
                         <div class="recipe-info">
                             <h1><%= recipe.name %></h1>
                             <% if( typeof users != 'undefined') { %>
