change filenames and add edit handler

--- a/views/create-or-edit_recipe.ejs
+++ b/views/create-or-edit_recipe.ejs
@@ -11,7 +11,7 @@
                 <!-- Anfang Formular -->
                 <form id="form-new-recipe" class="form" action="/create-submit" method="POST" enctype="multipart/form-data">
 
-                    <h1>Create a new recipe</h1>
+                    <h1><%= title %></h1>
 
                     <!-- Recipe Name -->
                     <div class="input-control">
