add edit feature in ejs

--- a/views/display-recipe.ejs
+++ b/views/display-recipe.ejs
@@ -34,9 +34,9 @@
                             <% let username = '"deleted user"'; users.forEach(user => { if(user._id == recipe.created_by){ username = user.username}});%>
                             <p>Created by <%= username %></p>
                             <% } %>
-                            <p>Author Rating: <%= recipe.author_rating %></p>
-                            <p>Public Rating: <%= recipe.public_rating %></p>
+                            <p>Rating: <%= recipe.rating %></p>
                             <p>Preparation Time: <%= recipe.preparation_time %> min</p>
+                            <p>Difficulty: <%= recipe.difficulty %></p>
                         </div>
                         <div class="recipe-content">
                             <p><%= recipe.full_recipe %></p>
