--- a/views/create-or-edit-recipe.ejs
+++ b/views/create-or-edit-recipe.ejs
@@ -16,7 +16,7 @@
                     <!-- Recipe Name -->
                     <div class="input-control">
                         <label for="user">Recipe Name:</label>
-                        <input type="text" id="name" name="name" required>
+                        <input type="text" id="name" name="name" required value='<%= (typeof recipe === "undefined") ? "" : recipe.name %>'>
                         <div class="errormessage"></div>
                     </div>
                     <div class="input-control">
@@ -24,46 +24,31 @@
                         <input type="file" id="image" name="image">
                         <div class="errormessage"></div>
                     </div>
-                    <!-- Own Recipe Rating -->
-                    <div class="input-control">
-                        <label for="user">Own Rating for Recipe:</label><br> <!-- Achtung hier br  -->
-                        <input type="radio" id="1star" name="author_rating" value="1">
-                        <label for="1">1 Star</label><br>
-                        <input type="radio" id="2star" name="author_rating" value="2">
-                        <label for="1">2 Star</label><br>
-                        <input type="radio" id="3star" name="author_rating" value="3">
-                        <label for="1">3 Star</label><br>
-                        <input type="radio" id="4star" name="author_rating" value="4">
-                        <label for="1">4 Star</label><br>
-                        <input type="radio" id="5star" name="author_rating" value="5" checked>
-                        <label for="1">5 Star</label><br>
-                        <div class="errormessage"></div>
-                    </div>
                     <!-- Difficulty of preparing this dish -->
                     <div class="input-control">
                         <label for="difficulty">Difficulty:</label>
                         <select name="difficulty" id="difficulty" size="1">
-                            <option value="easy">Easy</option>
-                            <option value="medium">Medium</option>
-                            <option value="hard">Hard</option>
-                            <option value="chef">Chef</option>
+                            <option value="easy" <% if(typeof recipe !== "undefined" && recipe.difficulty === "easy"){ %> selected <% } %>>Easy</option>
+                            <option value="medium" <% if(typeof recipe !== "undefined" && recipe.difficulty === "medium"){ %> selected <% } %>>Medium</option>
+                            <option value="hard" <% if(typeof recipe !== "undefined" && recipe.difficulty === "hard"){ %> selected <% } %>>Hard</option>
+                            <option value="chef" <% if(typeof recipe !== "undefined" && recipe.difficulty === "chef"){ %> selected <% } %>>Chef</option>
                         </select> <!-- Should be drop down with easy, medium, hard -->
                         <div class="errormessage"></div>
                     </div>
                     <!-- Estimated time of preparation of the dish -->
                     <div class="input-control">
-                        <label for="preparation-time">Estimated Total Preparation Time:</label>
-                        <input type="text" id="preparation_time" name="preparation_time" required>
+                        <label for="preparation_time">Estimated Total Preparation Time (min):</label>
+                        <input type="text" id="preparation_time" name="preparation_time" required value='<%= (typeof recipe === "undefined") ? "" : recipe.preparation_time %>'>
                         <div class="errormessage"></div>
                     </div>
                     <div class="input-control">
                         <label for="recipe">Full Recipe:</label>
-                        <input type="text" id="full_recipe" name="full_recipe" required>
+                        <input type="text" id="full_recipe" name="full_recipe" required  value='<%= (typeof recipe === "undefined") ? "" : recipe.full_recipe %>'>
                         <div class="errormessage"></div>
                     </div>
 
                     <!-- Formular absenden -->
-                    <button type="submit">Create Recipe</button>
+                    <button type="submit"><%= edit_create %> Recipe</button>
 
                 </form> <!-- Formular Ende -->
 
