--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -12,7 +12,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a href="/create" class="nav-link">
+            <a href="/recipe/create" class="nav-link">
                 <span class="link-text">Create</span>
             </a>
         </li>
