--- a/public/style.css
+++ b/public/style.css
@@ -4,21 +4,40 @@
 
 body {
     margin: 0;
-    font-family: "Lato", sans-serif;
+    padding: 0;
+    margin-top: 4rem;
+    font-family: Georgia, 'Times New Roman', Times, serif
 }
 
 :root {
     --gray: rgba(218, 224, 230, 1);
     --white: rgba(247, 247, 245, 1);
-    --orange: rgba(219, 84, 50, 1);
-    --darkgray: rgba(85, 85, 87, 1);
+    --border: rgb(150, 150, 150);
+    --primary-background: rgb(255, 255, 255);
+    --secondary-background: rgb(214, 214, 191);
 }
 
 h1 {
-    font-size: 3rem;
+    font-size: clamp(2rem, 15vw, 3rem);
     text-align: center;
 }
 
+h2 {
+    font-size: clamp(1.5rem, 8vw, 2.3rem);
+}
+
 p {
-    font-size: 1.7rem;
+    font-size: clamp(1.2rem, 8vw, 2rem);
+    line-height: 50%;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
