--- a/public/display-recipesStyle.css
+++ b/public/display-recipesStyle.css
@@ -1,10 +1,38 @@
+.recipe-container{
+    display: flex;
+    flex-direction: column;
+    gap: 1%;
+    margin: 1em;
+}
+
 .recipe {
     border: 1px solid var(--border);
     border-radius: .5em;
     padding: 1em;
-    margin: 1em;
     background-color: var(--secondary-background);
     overflow: hidden;
 }
 
 
+/* On screens that are 992px or more (TABLET/DESKTOP) */
+@media screen and (min-width: 600px) {
+
+
+
+}
+
+/* On screens that are 992px or more (DESKTOP) */
+@media screen and (min-width: 992px) {
+
+    .recipe-container{
+        flex-wrap: wrap;
+        flex-direction: row;
+    }
+
+    .recipe {
+        flex: 48%;
+    }
+
+
+
+}
