style login and signup page

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('./partials/head.ejs') %>
-<body>
+<%- include('./partials/head.ejs') %>
 
-    <%- include('./partials/nav.ejs') %>
+    <body>
 
-    <h1>About</h1>
+        <%- include('./partials/nav.ejs') %>
 
-    <p>This is a Website to save, create and share cooking recipes.</p>
-    
-    
-    <%- include('./partials/footer.ejs') %>
+            <main>
 
-</body>
-</html> 
+                <h1>About</h1>
+
+                <p>This is a Website to save, create and share cooking recipes.</p>
+
+            </main>
+
+            <%- include('./partials/footer.ejs') %>
+
+    </body>
+
+</html>
