--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,6 @@
 body {
     margin: 0;
     padding: 0;
-    margin-top: 4rem;
     font-family: Georgia, 'Times New Roman', Times, serif
 }
 
@@ -15,6 +14,10 @@ body {
     --border: rgb(150, 150, 150);
     --primary-background: rgb(255, 255, 255);
     --secondary-background: rgb(214, 214, 191);
+}
+
+main {
+    padding-top: 3rem;
 }
 
 h1 {
