--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('./partials/head.ejs') %>
-<body>
+<%- include('./partials/head.ejs') %>
 
-    <%- include('./partials/nav.ejs') %>
+    <body>
 
-    <h1>Error 404 - Website not found</h1>
-    
-    
-    <%- include('./partials/footer.ejs') %>
+        <%- include('./partials/nav.ejs') %>
 
-</body>
-</html> 
+            <main>
+                <h1>Error 404 - Website not found</h1>
+            </main>
+
+            <%- include('./partials/footer.ejs') %>
+
+    </body>
+
+</html>
