--- a/public/display-recipesStyle.css
+++ b/public/display-recipesStyle.css
@@ -1,7 +1,6 @@
 .recipe-container{
-    display: flex;
-    flex-direction: column;
-    gap: 1%;
+    display: grid;
+    gap: .5em;
     margin: 1em;
 }
 
@@ -17,22 +16,14 @@
 /* On screens that are 992px or more (TABLET/DESKTOP) */
 @media screen and (min-width: 600px) {
 
-
-
 }
 
 /* On screens that are 992px or more (DESKTOP) */
 @media screen and (min-width: 992px) {
 
     .recipe-container{
-        flex-wrap: wrap;
-        flex-direction: row;
+        grid-template-columns: 1fr 1fr;
     }
-
-    .recipe {
-        flex: 48%;
-    }
-
 
 
 }
